fix: spacing ebtween desktop user menu

--- a/src/features/auth/UserMenu.module.scss
+++ b/src/features/auth/UserMenu.module.scss
@@ -2,3 +2,8 @@
   margin: var(--padding-sm) var(--padding-md) var(--padding-sm) 0;
   font-size: var(--avatar-size);
 }
+
+.username {
+  margin-left: var(--padding-md);
+  margin-right: var(--padding-md);
+}
